--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.0.7",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@uploadthing/react": "^6.5.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
