--- a/package.json
+++ b/package.json
@@ -15,26 +15,33 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@uploadthing/react": "^6.5.3",
+    "@vitalets/google-translate-api": "^9.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.378.0",
     "mongodb": "^6.6.1",
     "mongoose": "^8.3.4",
     "next": "14.2.3",
+    "papaparse": "^5.4.1",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
     "svix": "^1.24.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.10.3"
+    "uploadthing": "^6.10.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "host_permissions": [
+    "https://translate.google.com/"
+  ]
 }
