--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@vitalets/google-translate-api": "^9.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel": "^8.1.5",
+    "embla-carousel-autoplay": "^8.1.5",
+    "embla-carousel-react": "^8.1.5",
     "lucide-react": "^0.378.0",
     "mongodb": "^6.6.1",
     "mongoose": "^8.3.4",
