--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.0.7",
     "@hookform/resolvers": "^3.4.2",
+    "@next/third-parties": "^14.2.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
@@ -26,7 +27,7 @@
     "lucide-react": "^0.378.0",
     "mongodb": "^6.6.1",
     "mongoose": "^8.3.4",
-    "next": "14.2.3",
+    "next": "^14.2.4",
     "papaparse": "^5.4.1",
     "query-string": "^9.0.0",
     "react": "^18",
