--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@react-email/components": "^0.0.20",
+    "@react-email/tailwind": "^0.0.18",
     "@uploadthing/react": "^6.5.3",
     "@vitalets/google-translate-api": "^9.2.0",
     "class-variance-authority": "^0.7.0",
@@ -34,6 +36,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
+    "resend": "^0.16.0",
     "svix": "^1.24.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
