--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongodb": "^6.6.1",
     "mongoose": "^8.3.4",
     "next": "^14.2.4",
+    "nodemailer": "^6.9.14",
     "papaparse": "^5.4.1",
     "query-string": "^9.0.0",
     "react": "^18",
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
