--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "embla-carousel": "^8.1.5",
     "embla-carousel-autoplay": "^8.1.5",
     "embla-carousel-react": "^8.1.5",
+    "framer-motion": "^11.3.2",
     "lucide-react": "^0.378.0",
     "mongodb": "^6.6.1",
     "mongoose": "^8.3.4",
@@ -37,6 +38,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
+    "react-intersection-observer": "^9.13.0",
     "resend": "^0.16.0",
     "svix": "^1.24.0",
     "tailwind-merge": "^2.3.0",
